# circlegen

./: ########.txt  .gitignore  CMakeLists.txt  LICENSE  MainWindow.cpp  Makefile  README  README.md  cgfill.cpp  cgfill_old.cpp  cgio.cpp  cgiosvg.cpp  cgproc.cpp  cgproc_old.cpp  cgrender.cpp  derivs.txt  index.html  main.cpp  temp.md  todo.txt
include/: MainWindow.h  cgfill.h  cgio.h  cgiosvg.h  cgproc.h  cgproc_old.h  cgrender.h  circlegen.h  wasm_circlegen.h
include/old/: cgrender.h
src_old/: cgfill_old.cpp  cgio_old.cpp  cgproc_old.cpp  cgrender_old.cpp  main_old.cpp
wasm/: cgwasm.cpp  circlegen.js  circlegen.wasm  index.html
wasm-test/: wrapping.js  wrapping.wasm
wasm/src/: build.fish  build.sh  cgfill.cpp  cgparse.cpp  cgproc.cpp  index.cpp
wasm/test/: memory.cpp  memory.html  streaming.cpp  streaming.html  wrapping.cpp  wrapping.html
